# proof-by-refl

./: .gitignore  README.md  dune-project  proof-by-refl.opam
talk/: presentation-ru.tex  presentation.tex
theories/: dune
theories/Misc/: IsEven.v  Monoid.v
